# cam_project

./: .gitmodules  CMakeLists.txt  Readme.md  cam_project.cpp  dfasdfCMakeLists.txt
Arducam/src/: CMakeLists.txt  arducam.c  arducam.h  ov2640.h
backup/: arducam.c  arducam.h  task_person_detection.h
include/: FreeRTOSConfig.h
person_detection/: CMakeLists copy.txt  CMakeLists.txt  bare_metal_main.cpp  detect_config.h  detection_responder.cpp  detection_responder.h  image_provider.cpp  image_provider.h  main.cpp  main_function.cpp  main_function.h  message_sender.cpp  message_sender.h  model_settings.cpp  model_settings.h  motion_detection.cpp  motion_detection.h  person_detection_model_data.h  simple_cv.cpp  task_capture.h  task_capture_transfer.h  task_person_detection.cpp  task_person_detection.h  task_pretask.cpp  task_pretask.h  tiny_cv.cpp  tiny_cv.h
person_detection/tensorflow_models/: person_detection_model_data.cpp
src/tensorflow/lite/micro/: micro_error_reporter.h
